Implements tests for validating the ProbCount UDAF