@@ -7,8 +7,11 @@ sbtJniCoreScope := Compile
 
 javaOptions ++= Seq(
   "-Djava.library.path=" + baseDirectory.value.getAbsolutePath + "/project/native",
+  "-Dlog4j.configuration=" + baseDirectory.value.getAbsolutePath + "/log4j.properties",
   "--add-exports",
-  "java.base/sun.nio.ch=ALL-UNNAMED"
+  "java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens",
+  "java.base/sun.security.action=ALL-UNNAMED"
 )
 
 coverageEnabled := true
@@ -23,6 +26,7 @@ lazy val root = (project in file ("."))
     inConfig(PerfTest)(Defaults.testSettings),
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-sql" % "3.5.3",
+      "com.github.mrpowers" %% "spark-fast-tests" % "1.1.0" % "test",
       "org.scalactic" %% "scalactic" % "3.2.19",
       "org.scalatest" %% "scalatest-funspec" % "3.2.19" % "test",
       "org.scalatest" %% "scalatest-funspec" % "3.2.19" % PerfTest
